--- a/package.json
+++ b/package.json
@@ -45,17 +45,28 @@
             "recharts": "^2.15.2",
             "sonner": "^2.0.3",
             "tailwind-merge": "*",
-            "vaul": "^1.1.2"
+            "vaul": "^1.1.2",
+            "react-router-dom": "^6.18.0"
       },
       "devDependencies": {
             "@types/node": "^20.10.0",
-            "@types/react": "^19.2.2",
-            "@types/react-dom": "^19.2.1",
+            "@types/react": "^18.2.0",
+            "@types/react-dom": "^18.2.0",
             "@vitejs/plugin-react-swc": "^3.10.2",
-            "vite": "6.3.5"
+            "vite": "6.3.5",
+            "eslint": "^8.30.0",
+            "eslint-plugin-react": "^7.32.2",
+            "eslint-plugin-react-hooks": "^4.6.0",
+            "@typescript-eslint/parser": "^5.59.0",
+            "@typescript-eslint/eslint-plugin": "^5.59.0",
+            "eslint-config-prettier": "^8.8.0",
+            "prettier": "^2.8.8"
       },
       "scripts": {
             "dev": "vite",
-            "build": "vite build"
+            "build": "vite build",
+            "lint": "eslint 'src/**/*.{ts,tsx,js,jsx}'",
+            "lint:fix": "eslint 'src/**/*.{ts,tsx,js,jsx}' --fix",
+            "format": "prettier --write 'src/**/*.{ts,tsx,js,jsx,css,json,md}'"
       }
 }
