--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,9 @@
     "baseUrl": "./",
     "paths": {
       "@/*": ["src/*"]
-    }
+    },
+    "types": ["vitest/globals", "@testing-library/jest-dom"]
   },
-  "include": ["src", "env.d.ts"],
+  "include": ["src", "env.d.ts", "test/setupTests.ts"],
   "references": []
 }
