--- a/package.json
+++ b/package.json
@@ -33,35 +33,36 @@
             "clsx": "*",
             "cmdk": "^1.1.1",
             "embla-carousel-react": "^8.6.0",
+            "framer-motion": "^10.12.16",
             "input-otp": "^1.4.2",
             "lucide-react": "^0.487.0",
             "motion": "*",
-            "framer-motion": "^10.12.16",
             "next-themes": "^0.4.6",
+            "pdfjs-dist": "^5.4.394",
             "react": "^18.3.1",
             "react-day-picker": "^8.10.1",
             "react-dom": "^18.3.1",
             "react-hook-form": "^7.55.0",
             "react-resizable-panels": "^2.1.7",
+            "react-router-dom": "^6.18.0",
             "recharts": "^2.15.2",
             "sonner": "^2.0.3",
             "tailwind-merge": "*",
-            "vaul": "^1.1.2",
-            "react-router-dom": "^6.18.0"
+            "vaul": "^1.1.2"
       },
       "devDependencies": {
             "@types/node": "^20.10.0",
             "@types/react": "^18.2.0",
             "@types/react-dom": "^18.2.0",
+            "@typescript-eslint/eslint-plugin": "^5.59.0",
+            "@typescript-eslint/parser": "^5.59.0",
             "@vitejs/plugin-react-swc": "^3.10.2",
-            "vite": "6.3.5",
             "eslint": "^8.30.0",
+            "eslint-config-prettier": "^8.8.0",
             "eslint-plugin-react": "^7.32.2",
             "eslint-plugin-react-hooks": "^4.6.0",
-            "@typescript-eslint/parser": "^5.59.0",
-            "@typescript-eslint/eslint-plugin": "^5.59.0",
-            "eslint-config-prettier": "^8.8.0",
-            "prettier": "^2.8.8"
+            "prettier": "^2.8.8",
+            "vite": "6.3.5"
       },
       "scripts": {
             "dev": "vite",
