--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
             "happy-dom": "^20.0.10",
             "jsdom": "^27.1.0",
             "prettier": "^2.8.8",
-            "vite": "6.3.5",
+            "vite": "^6.4.1",
             "vitest": "^4.0.8"
       },
       "scripts": {
